--- a/index.html
+++ b/index.html
@@ -355,8 +355,7 @@ Happy Birthday, Sona. I love you more than words can ever fully explain. 💖`,
 
         // COMPLETE plan text
         planText:
-          "Today I just want you to feel loved — in the soft way, the real way. We can do anything you want: your favourite food, a sweet walk, a movie, a long drive, or a quiet moment where I hold you and remind you you’re my best thing.",
-
+          "Today I just want you to feel loved — even from miles away, in the soft and real way that never fades. Though we’re apart, my heart is always with you. Until we’re together again, imagine me holding you close, sharing your favourite food, taking that long walk, or sitting quietly with you — reminding you that you are, and always will be, my best thing.",
         footerNote: "Made with love for Sona — since 2022 💖",
         enableConfetti: true,
 
